全文件上传

--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-# 数据库配置
-DB_HOST=localhost
+DB_HOST=rm-wz9mt4j79jrdh0p3z.mysql.rds.aliyuncs.com
 DB_PORT=3306
-DB_DATABASE=gogo_shop
-DB_USER=root
-DB_PWD=your_strong_password_here
+DB_DATABASE=shop
+DB_USER=gogo198
+DB_PWD=Gogo@198
+PAYPAL_SECRET=your_paypal_secret
 
 # 支付密钥（PayPal / Stripe 等）
 PAYPAL_SECRET=your_paypal_secret_key_here
